deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proof-sdk
  namespace: proof
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app.kubernetes.io/name: proof-sdk
